feat: Simple markup done for books

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^14.1.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "scroll-to-top": "^1.1.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
@@ -40,6 +41,7 @@
     "@types/node": "^20.11.20",
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
+    "@types/react-lazy-load-image-component": "^1.6.3",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "eslint": "^8.57.0",
