--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.51.1",
         "react-lazy-load-image-component": "^1.6.0",
+        "react-quill": "^2.0.0",
         "scroll-to-top": "^1.1.0",
         "server-only": "^0.0.1",
         "superjson": "^2.2.1",
