--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "@trpc/react-query": "next",
         "@trpc/server": "next",
         "class-variance-authority": "^0.7.0",
+        "classnames": "^2.5.1",
         "clsx": "^2.1.0",
         "date-fns": "^3.6.0",
         "framer-motion": "^11.0.20",
