--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "format": "prettier --write --ignore-path .gitignore ."
     },
     "dependencies": {
+        "@hookform/resolvers": "^3.3.4",
         "@prisma/client": "^5.10.2",
         "@radix-ui/react-dialog": "^1.0.5",
         "@radix-ui/react-label": "^2.0.2",
