--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
         "@prisma/client": "^5.10.2",
+        "@radix-ui/react-alert-dialog": "^1.0.5",
         "@radix-ui/react-dialog": "^1.0.5",
+        "@radix-ui/react-hover-card": "^1.0.7",
         "@radix-ui/react-label": "^2.0.2",
         "@radix-ui/react-select": "^2.0.0",
         "@radix-ui/react-slot": "^1.0.2",
@@ -37,6 +39,7 @@
         "lucide-react": "^0.363.0",
         "next": "^14.1.3",
         "react": "18.2.0",
+        "react-day-picker": "^8.10.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.51.1",
         "react-lazy-load-image-component": "^1.6.0",
