--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     },
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
+        "@lucia-auth/adapter-prisma": "^4.0.1",
         "@prisma/client": "^5.10.2",
         "@radix-ui/react-alert-dialog": "^1.0.5",
         "@radix-ui/react-avatar": "^1.0.4",
