--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
         "postinstall": "prisma generate",
         "lint": "next lint",
         "start": "next start",
-        "format": "prettier --write --ignore-path .gitignore ."
+        "format": "pnpm biome format . --write"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
@@ -60,6 +60,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@biomejs/biome": "1.6.3",
         "@types/eslint": "^8.56.2",
         "@types/node": "^20.11.20",
         "@types/react": "^18.2.57",
@@ -70,8 +71,6 @@
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.1.3",
         "postcss": "^8.4.34",
-        "prettier": "^3.2.5",
-        "prettier-plugin-tailwindcss": "^0.5.12",
         "prisma": "^5.10.2",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.4.2"
