--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
         "dev": "next dev --turbo",
         "postinstall": "prisma generate",
         "lint": "next lint",
-        "start": "next start"
+        "start": "next start",
+		"format": "pnpm biome format . --write"
     },
     "dependencies": {
         "@hookform/resolvers": "^3.3.4",
@@ -59,6 +60,7 @@
         "zod": "^3.22.4"
     },
     "devDependencies": {
+        "@biomejs/biome": "1.6.3",
         "@types/eslint": "^8.56.2",
         "@types/node": "^20.11.20",
         "@types/react": "^18.2.57",
