--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"clsx": "^2.1.0",
 		"date-fns": "^3.6.0",
 		"framer-motion": "^11.0.20",
+		"js-cookie": "^3.0.5",
 		"lucia": "^3.1.1",
 		"lucide-react": "^0.363.0",
 		"next": "^14.1.3",
