--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"postinstall": "prisma generate",
 		"lint": "next lint",
 		"start": "next start",
-		"format": "pnpm biome format . --write"
+		"format": "npm biome format . --write"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.4",
