--- a/package.json
+++ b/package.json
@@ -1,22 +1,22 @@
 {
-	"name": "spst-kniznica",
-	"version": "0.3.0",
-	"private": true,
-	"type": "module",
-	"author": {
-		"name": "Peter Dinis",
-		"email": "pdinis1@gmail.com"
-	},
-	"scripts": {
-		"build": "next build",
-		"db:push": "prisma db push",
-		"db:studio": "prisma studio",
-		"dev": "next dev --turbo",
-		"postinstall": "prisma generate",
-		"lint": "next lint",
-		"start": "next start"
-	},
-	"dependencies": {
+    "name": "spst-kniznica",
+    "version": "0.3.0",
+    "private": true,
+    "type": "module",
+    "author": {
+        "name": "Peter Dinis",
+        "email": "pdinis1@gmail.com"
+    },
+    "scripts": {
+        "build": "next build",
+        "db:push": "prisma db push",
+        "db:studio": "prisma studio",
+        "dev": "next dev --turbo",
+        "postinstall": "prisma generate",
+        "lint": "next lint",
+        "start": "next start"
+    },
+    "dependencies": {
         "@hookform/resolvers": "^3.3.4",
         "@lucia-auth/adapter-prisma": "^4.0.1",
         "@prisma/client": "^5.10.2",
@@ -50,7 +50,6 @@
         "react-dom": "18.2.0",
         "react-hook-form": "^7.51.1",
         "react-lazy-load-image-component": "^1.6.0",
-        "react-quill": "^2.0.0",
         "scroll-to-top": "^1.1.0",
         "server-only": "^0.0.1",
         "superjson": "^2.2.1",
@@ -69,12 +68,13 @@
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.1.3",
         "postcss": "^8.4.34",
+        "prettier": "^3.2.5",
+        "prettier-plugin-tailwindcss": "^0.5.12",
         "prisma": "^5.10.2",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.4.2"
     },
-	"ct3aMetadata": {
-		"initVersion": "7.30.0"
-	},
-	"packageManager": "pnpm@8.15.1"
+    "ct3aMetadata": {
+        "initVersion": "7.30.0"
+    }
 }
