--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     },
     "dependencies": {
         "@prisma/client": "^5.11.0",
+        "@radix-ui/react-toast": "^1.1.5",
         "@t3-oss/env-nextjs": "^0.9.2",
         "@tanstack/react-query": "^5.25.0",
         "@tanstack/react-table": "^8.15.0",
@@ -32,21 +33,21 @@
         "framer-motion": "^11.0.20",
         "lucia": "^3.1.1",
         "lucide-react": "^0.363.0",
-        "next": "^14.1.3"
+        "next": "^14.1.3",
+        "superjson": "^2.2.1",
+        "tailwind-merge": "^2.2.2",
+        "tailwindcss-animate": "^1.0.7"
     },
     "devDependencies": {
         "@types/eslint": "^8.56.2",
         "@types/node": "^20.11.20",
         "@types/react": "^18.2.57",
         "@types/react-dom": "^18.2.19",
-        "@types/react-lazy-load-image-component": "^1.6.3",
         "@typescript-eslint/eslint-plugin": "^7.1.1",
         "@typescript-eslint/parser": "^7.1.1",
         "eslint": "^8.57.0",
         "eslint-config-next": "^14.1.3",
         "postcss": "^8.4.34",
-        "prettier": "^3.2.5",
-        "prettier-plugin-tailwindcss": "^0.5.12",
         "prisma": "^5.10.2",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.4.2"
