--- a/package.json
+++ b/package.json
@@ -1,49 +1,52 @@
 {
-    "name": "spst-kniznica",
-    "version": "0.3.0",
-    "private": true,
-    "type": "module",
-    "author": {
-        "name": "Peter Dinis",
-        "email": "pdinis1@gmail.com"
-    },
-    "scripts": {
-        "build": "next build",
-        "dev": "next dev --turbo",
-        "lint": "next lint",
-        "start": "next start"
-    },
-    "dependencies": {
-        "@radix-ui/react-toast": "^1.1.5",
-        "@t3-oss/env-nextjs": "^0.9.2",
-        "@tanstack/react-query": "^5.25.0",
-        "@tanstack/react-table": "^8.15.0",
-        "@trpc/client": "next",
-        "@trpc/next": "next",
-        "@trpc/react-query": "next",
-        "@trpc/server": "next",
-        "class-variance-authority": "^0.7.0",
-        "classnames": "^2.5.1",
-        "clsx": "^2.1.0",
-        "framer-motion": "^11.0.20",
-        "lucia": "^3.1.1",
-        "lucide-react": "^0.363.0",
-        "next": "^14.1.4",
-        "superjson": "^2.2.1",
-        "tailwind-merge": "^2.2.2",
-        "tailwindcss-animate": "^1.0.7"
-    },
-    "devDependencies": {
-        "@types/eslint": "^8.56.2",
-        "@types/node": "^20.11.20",
-        "@types/react": "^18.2.57",
-        "@types/react-dom": "^18.2.19",
-        "@typescript-eslint/eslint-plugin": "^7.1.1",
-        "@typescript-eslint/parser": "^7.1.1",
-        "eslint": "^8.57.0",
-        "eslint-config-next": "^14.1.3",
-        "postcss": "^8.4.34",
-        "tailwindcss": "^3.4.1",
-        "typescript": "^5.4.2"
-    }
+  "name": "spst-kniznica",
+  "version": "0.3.0",
+  "private": true,
+  "type": "module",
+  "author": {
+    "name": "Peter Dinis",
+    "email": "pdinis1@gmail.com"
+  },
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev",
+    "lint": "next lint",
+    "start": "next start"
+  },
+  "dependencies": {
+    "@radix-ui/react-toast": "^1.1.5",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-table": "^8.15.0",
+    "@trpc/client": "next",
+    "@trpc/next": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.20",
+    "lucia": "^3.1.1",
+    "lucide-react": "^0.363.0",
+    "next": "^14.1.3",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@types/eslint": "^8.56.2",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
+    "postcss": "^8.4.34",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5.4.2"
+  }
 }
