--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@prisma/client": "^5.12.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
@@ -29,11 +30,11 @@
     "lucia": "^3.1.1",
     "lucide-react": "^0.363.0",
     "next": "^14.1.3",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -46,6 +47,7 @@
     "eslint": "^8.57.0",
     "eslint-config-next": "^14.1.3",
     "postcss": "^8.4.34",
+    "prisma": "^5.12.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.4.2"
   }
