infra: Adding seeder WIP

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
 		"dev": "next dev --turbo",
 		"lint": "next lint",
 		"start": "next start",
-		"format": "npx @biomejs/biome format . --write"
+		"format": "npx @biomejs/biome format . --write",
+		"seed": "ts-node prisma/seed.ts"
 	},
 	"dependencies": {
 		"@hookform/resolvers": "^3.3.4",
@@ -65,6 +66,7 @@
 		"postcss": "^8.4.34",
 		"prisma": "^5.12.0",
 		"tailwindcss": "^3.4.1",
+		"ts-node": "^10.9.2",
 		"typescript": "^5.4.2"
 	}
 }
