--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,42 +1,34 @@
 {
 	"compilerOptions": {
-		/* Base Options: */
-		"esModuleInterop": true,
-		"skipLibCheck": true,
-		"target": "es2022",
-		"allowJs": true,
-		"resolveJsonModule": true,
-		"moduleDetection": "force",
-		"isolatedModules": true,
-
-		/* Strictness */
-		"strict": true,
-		"noUncheckedIndexedAccess": true,
-		"checkJs": true,
-
-		/* Bundled projects */
-		"lib": ["dom", "dom.iterable", "ES2022"],
-		"noEmit": true,
-		"module": "ESNext",
-		"moduleResolution": "Bundler",
-		"jsx": "preserve",
-		"plugins": [{ "name": "next" }],
-		"incremental": true,
-
-		/* Path Aliases */
-		"baseUrl": ".",
-		"paths": {
-			"~/*": ["./src/*"]
-		}
+	  "esModuleInterop": true,
+	  "skipLibCheck": true,
+	  "target": "es2022",
+	  "allowJs": true,
+	  "resolveJsonModule": true,
+	  "isolatedModules": true,
+	  "strict": true,
+	  "noUncheckedIndexedAccess": true,
+	  "checkJs": true,
+	  "lib": ["dom", "dom.iterable", "ES2022"],
+	  "module": "CommonJS",
+	  "moduleResolution": "Node",
+	  "jsx": "preserve",
+	  "plugins": [{ "name": "next" }],
+	  "incremental": true,
+	  "baseUrl": ".",
+	  "paths": {
+		"~/*": ["./src/*"]
+	  }
 	},
 	"include": [
-		".eslintrc.cjs",
-		"next-env.d.ts",
-		"**/*.ts",
-		"**/*.tsx",
-		"**/*.cjs",
-		"**/*.js",
-		".next/types/**/*.ts"
+	  ".eslintrc.cjs",
+	  "next-env.d.ts",
+	  "**/*.ts",
+	  "**/*.tsx",
+	  "**/*.cjs",
+	  "**/*.js",
+	  ".next/types/**/*.ts"
 	],
 	"exclude": ["node_modules"]
-}
+  }
+  
