--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "spst-kniznica",
 	"version": "0.5.0",
 	"private": true,
+	"type": "module",
 	"author": {
 		"name": "Peter Dinis",
 		"email": "pdinis1@gmail.com"
