--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,34 +1,46 @@
 {
-	"compilerOptions": {
-	  "esModuleInterop": true,
-	  "skipLibCheck": true,
-	  "target": "es2022",
-	  "allowJs": true,
-	  "resolveJsonModule": true,
-	  "isolatedModules": true,
-	  "strict": true,
-	  "noUncheckedIndexedAccess": true,
-	  "checkJs": true,
-	  "lib": ["dom", "dom.iterable", "ES2022"],
-	  "module": "CommonJS",
-	  "moduleResolution": "Node",
-	  "jsx": "preserve",
-	  "plugins": [{ "name": "next" }],
-	  "incremental": true,
-	  "baseUrl": ".",
-	  "paths": {
-		"~/*": ["./src/*"]
-	  }
-	},
-	"include": [
-	  ".eslintrc.cjs",
-	  "next-env.d.ts",
-	  "**/*.ts",
-	  "**/*.tsx",
-	  "**/*.cjs",
-	  "**/*.js",
-	  ".next/types/**/*.ts"
-	],
-	"exclude": ["node_modules"]
-  }
-  
+  "compilerOptions": {
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "target": "es2022",
+    "allowJs": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "strict": true,
+    "noUncheckedIndexedAccess": true,
+    "checkJs": true,
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "ES2022"
+    ],
+    "module": "CommonJS",
+    "moduleResolution": "Node",
+    "jsx": "preserve",
+    "plugins": [
+      {
+        "name": "next"
+      }
+    ],
+    "incremental": true,
+    "baseUrl": ".",
+    "paths": {
+      "~/*": [
+        "./src/*"
+      ]
+    },
+    "noEmit": true
+  },
+  "include": [
+    ".eslintrc.cjs",
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    "**/*.cjs",
+    "**/*.js",
+    ".next/types/**/*.ts"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
+}
