--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,6 +17,7 @@
     "module": "CommonJS",
     "moduleResolution": "Node",
     "jsx": "preserve",
+    "types": ["bun-types"],
     "plugins": [
       {
         "name": "next"
