--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "lucia": "^3.1.1",
     "lucide-react": "^0.363.0",
     "next": "^14.1.3",
+    "novel": "^0.3.1",
     "oslo": "^1.2.0",
     "react": "18.2.0",
     "react-date-picker": "^10.6.0",
