--- a/package.json
+++ b/package.json
@@ -31,12 +31,6 @@
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
     "@tanstack/react-table": "^8.15.0",
-    "@tiptap/extension-task-item": "^2.2.4",
-    "@tiptap/extension-task-list": "^2.2.4",
-    "@tiptap/extension-text-style": "^2.2.4",
-    "@tiptap/pm": "^2.2.4",
-    "@tiptap/react": "^2.2.4",
-    "@tiptap/starter-kit": "^2.2.4",
     "@trpc/client": "next",
     "@trpc/next": "next",
     "@trpc/react-query": "next",
@@ -52,6 +46,7 @@
     "react": "18.2.0",
     "react-date-picker": "^10.6.0",
     "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
     "scroll-to-top": "^1.1.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
