--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
 		"next": "^14.1.3",
 		"oslo": "^1.2.0",
 		"react": "18.2.0",
+		"react-confetti": "^6.1.0",
 		"react-date-picker": "^10.6.0",
 		"react-dom": "18.2.0",
 		"scroll-to-top": "^1.1.0",
