--- a/package.json
+++ b/package.json
@@ -1,82 +1,83 @@
 {
-	"name": "spst-kniznica",
-	"version": "0.7.0",
-	"private": true,
-	"type": "module",
-	"author": {
-		"name": "Peter Dinis",
-		"email": "pdinis1@gmail.com"
-	},
-	"scripts": {
-		"build": "next build",
-		"dev": "next dev --turbo",
-		"lint": "next lint",
-		"start": "next start",
-		"format": "bunx @biomejs/biome format --write .",
-		"seed": "ts-node prisma/seed.ts"
-	},
-	"dependencies": {
-		"@hookform/resolvers": "^3.3.4",
-		"@lucia-auth/adapter-prisma": "^4.0.1",
-		"@prisma/client": "^5.12.0",
-		"@radix-ui/react-alert-dialog": "^1.0.5",
-		"@radix-ui/react-avatar": "^1.0.4",
-		"@radix-ui/react-dialog": "^1.0.5",
-		"@radix-ui/react-hover-card": "^1.0.7",
-		"@radix-ui/react-label": "^2.0.2",
-		"@radix-ui/react-select": "^2.0.0",
-		"@radix-ui/react-slot": "^1.0.2",
-		"@radix-ui/react-toast": "^1.1.5",
-		"@radix-ui/react-tooltip": "^1.0.7",
-		"@t3-oss/env-nextjs": "^0.9.2",
-		"@tanstack/react-query": "^5.25.0",
-		"@tanstack/react-table": "^8.15.0",
-		"@tiptap/extension-task-item": "^2.2.4",
-		"@tiptap/extension-task-list": "^2.2.4",
-		"@tiptap/extension-text-style": "^2.2.4",
-		"@tiptap/pm": "^2.2.4",
-		"@tiptap/react": "^2.2.4",
-		"@tiptap/starter-kit": "^2.2.4",
-		"@trpc/client": "next",
-		"@trpc/next": "next",
-		"@trpc/react-query": "next",
-		"@trpc/server": "next",
-		"class-variance-authority": "^0.7.0",
-		"classnames": "^2.5.1",
-		"clsx": "^2.1.0",
-		"framer-motion": "^11.0.20",
-		"lucia": "^3.1.1",
-		"lucide-react": "^0.363.0",
-		"next": "^14.1.3",
-		"oslo": "^1.2.0",
-		"react": "18.2.0",
-		"react-confetti": "^6.1.0",
-		"react-date-picker": "^10.6.0",
-		"react-dom": "18.2.0",
-		"scroll-to-top": "^1.1.0",
-		"server-only": "^0.0.1",
-		"superjson": "^2.2.1",
-		"tailwind-merge": "^2.2.2",
-		"tailwindcss-animate": "^1.0.7",
-		"zod": "^3.22.4"
-	},
-	"devDependencies": {
-		"@biomejs/biome": "1.6.3",
-		"@tailwindcss/forms": "^0.5.7",
-		"@tailwindcss/typography": "^0.5.12",
-		"@types/eslint": "^8.56.2",
-		"@types/node": "^20.11.20",
-		"@types/react": "^18.2.57",
-		"@types/react-dom": "^18.2.19",
-		"@typescript-eslint/eslint-plugin": "^7.1.1",
-		"@typescript-eslint/parser": "^7.1.1",
-		"bun-types": "^1.1.1",
-		"eslint": "^8.57.0",
-		"eslint-config-next": "^14.1.3",
-		"postcss": "^8.4.34",
-		"prisma": "^5.12.0",
-		"tailwindcss": "^3.4.1",
-		"ts-node": "^10.9.2",
-		"typescript": "^5.4.2"
-	}
+  "name": "spst-kniznica",
+  "version": "0.7.0",
+  "private": true,
+  "type": "module",
+  "author": {
+    "name": "Peter Dinis",
+    "email": "pdinis1@gmail.com"
+  },
+  "scripts": {
+    "build": "next build",
+    "dev": "next dev --turbo",
+    "lint": "next lint",
+    "start": "next start",
+    "format": "bunx @biomejs/biome format --write .",
+    "seed": "ts-node prisma/seed.ts"
+  },
+  "dependencies": {
+    "@hookform/resolvers": "^3.3.4",
+    "@lucia-auth/adapter-prisma": "^4.0.1",
+    "@prisma/client": "^5.12.0",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-select": "^2.0.0",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-toast": "^1.1.5",
+    "@radix-ui/react-tooltip": "^1.0.7",
+    "@t3-oss/env-nextjs": "^0.9.2",
+    "@tanstack/react-query": "^5.25.0",
+    "@tanstack/react-table": "^8.15.0",
+    "@tiptap/extension-task-item": "^2.2.4",
+    "@tiptap/extension-task-list": "^2.2.4",
+    "@tiptap/extension-text-style": "^2.2.4",
+    "@tiptap/pm": "^2.2.4",
+    "@tiptap/react": "^2.2.4",
+    "@tiptap/starter-kit": "^2.2.4",
+    "@trpc/client": "next",
+    "@trpc/next": "next",
+    "@trpc/react-query": "next",
+    "@trpc/server": "next",
+    "class-variance-authority": "^0.7.0",
+    "classnames": "^2.5.1",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.20",
+    "lucia": "^3.1.1",
+    "lucide-react": "^0.363.0",
+    "next": "^14.1.3",
+    "oslo": "^1.2.0",
+    "react": "18.2.0",
+    "react-confetti": "^6.1.0",
+    "react-date-picker": "^10.6.0",
+    "react-dom": "18.2.0",
+    "react-quill": "^2.0.0",
+    "scroll-to-top": "^1.1.0",
+    "server-only": "^0.0.1",
+    "superjson": "^2.2.1",
+    "tailwind-merge": "^2.2.2",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
+  },
+  "devDependencies": {
+    "@biomejs/biome": "1.6.3",
+    "@tailwindcss/forms": "^0.5.7",
+    "@tailwindcss/typography": "^0.5.12",
+    "@types/eslint": "^8.56.2",
+    "@types/node": "^20.11.20",
+    "@types/react": "^18.2.57",
+    "@types/react-dom": "^18.2.19",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
+    "bun-types": "^1.1.1",
+    "eslint": "^8.57.0",
+    "eslint-config-next": "^14.1.3",
+    "postcss": "^8.4.34",
+    "prisma": "^5.12.0",
+    "tailwindcss": "^3.4.1",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.4.2"
+  }
 }
