infra: Formatting files

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
 		"**/*.tsx",
 		"**/*.cjs",
 		"**/*.js",
-		".next/types/**/*.ts"
-, "next.config.mjs"	],
+		".next/types/**/*.ts",
+		"next.config.mjs"
+	],
 	"exclude": ["node_modules"]
 }
