--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "lucia": "^3.1.1",
     "lucide-react": "^0.363.0",
     "next": "^14.1.3",
+    "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "oslo": "^1.2.0",
     "react": "18.2.0",
