infra: Updating biomejs setup

--- a/biome.json
+++ b/biome.json
@@ -6,8 +6,20 @@
 	"formatter": {
 		"indentStyle": "tab",
 		"indentWidth": 4,
-		"formatWithErrors": false,
-		"enabled": true
+		"formatWithErrors": true,
+		"enabled": true,
+		"attributePosition": "auto"
+	},
+	"javascript": {
+		"formatter": {
+			"arrowParentheses": "always",
+			"bracketSameLine": false,
+			"bracketSpacing": true,
+			"jsxQuoteStyle": "double",
+			"quoteProperties": "asNeeded",
+			"semicolons": "always",
+			"trailingComma": "all"
+		}
 	},
 	"linter": {
 		"enabled": true,
