feat: Socket itergration react

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-quill": "^2.0.0",
     "scroll-to-top": "^1.1.0",
     "server-only": "^0.0.1",
+    "socket.io-client": "^4.7.5",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
     "tailwindcss-animate": "^1.0.7",
