--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "lint": "next lint",
     "start": "next start",
     "format": "bunx @biomejs/biome format --write .",
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "ts-node prisma/seed.ts",
+    "helperLint": "bunx eslint src -c .ts,.tsx --fix"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
