--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
+    "@react-email/components": "^0.0.17",
     "@react-pdf/renderer": "^3.4.4",
     "@t3-oss/env-nextjs": "^0.9.2",
     "@tanstack/react-query": "^5.25.0",
@@ -54,6 +55,7 @@
     "react-email": "^2.1.2",
     "react-hook-form": "^7.51.4",
     "react-quill": "^2.0.0",
+    "resend": "^3.2.0",
     "scroll-to-top": "^1.1.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
