--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-dom": "18.2.0",
     "react-email": "^2.1.2",
     "react-hook-form": "^7.51.4",
+    "react-lazyload": "^3.2.1",
     "react-quill": "^2.0.0",
     "resend": "^3.2.0",
     "scroll-to-top": "^1.1.0",
