--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-hook-form": "^7.51.4",
     "react-lazyload": "^3.2.1",
     "react-quill": "^2.0.0",
+    "react-window": "^1.8.10",
     "resend": "^3.2.0",
     "scroll-to-top": "^1.1.0",
     "server-only": "^0.0.1",
@@ -75,6 +76,7 @@
     "@types/react": "^18.2.57",
     "@types/react-dom": "^18.2.19",
     "@types/react-lazyload": "^3.2.3",
+    "@types/react-window": "^1.8.8",
     "@typescript-eslint/eslint-plugin": "^7.1.1",
     "@typescript-eslint/parser": "^7.1.1",
     "bun-types": "^1.1.7",
