--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "class-variance-authority": "^0.7.0",
     "classnames": "^2.5.1",
     "clsx": "^2.1.0",
+    "cookies-next": "^4.2.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.0.20",
     "js-cookie": "^3.0.5",
