feat: Fixing logic for sending emails WIP

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-hook-form": "^7.51.4",
     "react-lazyload": "^3.2.1",
     "react-window": "^1.8.10",
+    "resend": "^3.3.0",
     "server-only": "^0.0.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.2.2",
