--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
     "email": "pdinis1@gmail.com"
   },
   "scripts": {
-    "build": "next build && pnpm run postinstall",
+    "build": "next build && pnpm run postinstall && pnpm run seed",
     "dev": "next dev --turbo",
     "lint": "next lint",
-    "start": "next start",
+    "start": "next start && pnpm run seed",
     "format": "bunx @biomejs/biome check --apply .",
     "seed": "ts-node prisma/seed.ts",
     "postinstall": "prisma generate"
